--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,15 @@ dependencies:
   path_provider: ^2.0.8
   shared_preferences: ^2.0.11
   loader_overlay: ^2.0.4
+  firebase_analytics: ^9.0.5
+  intl: ^0.17.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.10.6
-  firebase_analytics: ^9.0.5
+  firebase_core: ^1.11.0
+  firebase_auth: ^3.3.5
 
 
 dev_dependencies:
