--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,11 @@ dependencies:
   loader_overlay: ^2.0.4
   firebase_analytics: ^9.0.5
   intl: ^0.17.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.11.0
   firebase_auth: ^3.3.5
+  cloud_firestore: ^3.1.6
+  connectivity_plus: ^2.2.0
 
 
 dev_dependencies:
